# maas-cpu-analyzer

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  pr.yml  release.yml  status.yml
maas_cpu_analyzer/: __init__.py  maas_cpu_analyzer.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.json
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_maas_api.py  test_maas_cpu_analyzer.py  test_openstack_api.py
