[metadata]
name = maas-cpu-analyzer
version = 1.0.0
author = Dincer Celik
author_email = hello@dincercelik.com
description = A Python tool to analyze CPU models in MAAS machines and optionally create OpenStack traits for resource scheduling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dincercelik/maas-cpu-analyzer
download_url = https://github.com/dincercelik/maas-cpu-analyzer/archive/refs/tags/v1.0.0.tar.gz
keywords = maas openstack cpu traits hardware analysis
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration
    Topic :: System :: Hardware
project_urls =
    Bug Reports = https://github.com/dincercelik/maas-cpu-analyzer/issues
    Source = https://github.com/dincercelik/maas-cpu-analyzer

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    maas-cpu-analyzer = maas_cpu_analyzer:main

[options.packages.find]
where = .
include = *
exclude = tests*

[options.package_data]
* = *.txt, *.md, *.cfg

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
